@@ -1,5 +1,6 @@
 2005-01-22 Sven Van Caekenberghe <svc@mac.com>
 
         * added serialization support for characters (suggested by ian eslick) 
+	* added support for unprintable symbols
 
 
